--- a/kulkrig.html
+++ b/kulkrig.html
@@ -8,5 +8,6 @@
 <body>
     <p> Hei vi er kule,(minus Trym)</p>
     <p> hei ser dere dette alex skriver</p>
+    <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
 </body>
 </html>
