--- a/kulkrig.html
+++ b/kulkrig.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kulkrig</title>
+
+    <style>
+        
+    </style>
 </head>
 <body>
     <p> Hei vi er kule,(minus Trym)</p>
