--- a/kulkrig.html
+++ b/kulkrig.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kulkrig</title>
 
     <style>
-        
+        * {
+            margin: 0;
+            padding: 0;
+        }
     </style>
 </head>
+
 <body>
     <p> Hei vi er kule,(minus Trym)</p>
     <p> hei ser dere dette alex skriver</p>
     <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
     <p> Prøver noe nytt, ser dere den</p>
 </body>
+
 </html>
