--- a/kulkrig.html
+++ b/kulkrig.html
@@ -14,5 +14,6 @@
     <p> hei ser dere dette alex skriver</p>
     <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
     <p> Prøver noe nytt, ser dere den</p>
+    <p>butta Gois</p>
 </body>
 </html>
