--- a/kulkrig.html
+++ b/kulkrig.html
@@ -20,6 +20,7 @@
     <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
     <p> Prøver noe nytt, ser dere den</p>
     <p>butta Gois</p>
+    <p>test for ole</p>
 </body>
 
 </html>
