--- a/kulkrig.html
+++ b/kulkrig.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <h1>HER ER NETTSIDEN SJEKK A</h1>
     <p> Hei vi er kule,(minus Trym)</p>
     <p> hei ser dere dette alex skriver</p>
     <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
