--- a/kulkrig.html
+++ b/kulkrig.html
@@ -11,6 +11,13 @@
             margin: 0;
             padding: 0;
         }
+
+        h1{
+            color: blue;
+            border: 2px solid black;
+            border-radius: 2px;
+            background-color: aqua;
+        }
     </style>
 </head>
 
