--- a/kulkrig.html
+++ b/kulkrig.html
@@ -21,7 +21,7 @@
     <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
     <p> Prøver noe nytt, ser dere den</p>
     <p>butta Gois</p>
-
+    <h1>kule gutter og trym</h1>
     <p>test for ole</p>
 
     
