--- a/kulkrig.html
+++ b/kulkrig.html
@@ -10,6 +10,8 @@
         * {
             margin: 0;
             padding: 0;
+            background-color:brown;
+
         }
 
         h1{
@@ -18,6 +20,7 @@
             border-radius: 2px;
             background-color: aqua;
         }
+
     </style>
 </head>
 
@@ -28,6 +31,7 @@
     <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
     <p> Prøver noe nytt, ser dere den</p>
     <p>butta Gois</p>
+    
 
     <p>test for ole</p>
 
