--- a/kulkrig.html
+++ b/kulkrig.html
@@ -21,6 +21,11 @@
             background-color: aqua;
         }
 
+        p{
+            color: floralwhite;
+            font-size: large;
+        }
+
     </style>
 </head>
 
