--- a/kulkrig.html
+++ b/kulkrig.html
@@ -7,32 +7,39 @@
     <title>Kulkrig</title>
 
     <style>
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+        }
+
         * {
             margin: 0;
             padding: 0;
-            background-color:brown;
+            background-color: brown;
 
         }
 
-        h1{
+        h1 {
             color: blue;
             border: 2px solid black;
             border-radius: 2px;
             background-color: aqua;
         }
-
     </style>
 </head>
 
 <body>
-    <h1>HER ER NETTSIDEN SJEKK A</h1>
-    <p> Hei vi er kule,(minus Trym)</p>
-    <p> hei ser dere dette alex skriver</p>
-    <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
-    <p> Prøver noe nytt, ser dere den</p>
-    <p>butta Gois</p>
-    <h1>kule gutter og trym</h1>
-    
+    <div class="container">
+        <h1>HER ER NETTSIDEN SJEKK A</h1>
+        <p> Hei vi er kule,(minus Trym)</p>
+        <p> hei ser dere dette alex skriver</p>
+        <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
+        <p> Prøver noe nytt, ser dere den</p>
+        <p>butta Gois</p>
+        <h1>kule gutter og trym</h1>
+    </div>
 </body>
 
 </html>
