--- a/kulkrig.html
+++ b/kulkrig.html
@@ -12,6 +12,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
+            gap: 40px;
         }
 
         * {
