Trym lagde en div

--- a/kulkrig.html
+++ b/kulkrig.html
@@ -41,6 +41,10 @@
         <p>butta Gois</p>
         <h1>kule gutter og trym</h1>
     </div>
+
+    <div class="Ekstra_boks">
+        <h2>Olebassen06 er grov</h2>
+    </div>
 </body>
 
 </html>
