--- a/kulkrig.html
+++ b/kulkrig.html
@@ -29,7 +29,10 @@
             background-color: aqua;
         }
 
-
+        .Ekstra boks{
+            display: flex;
+            align-items: center;
+        }
     </style>
 </head>
 
