--- a/kulkrig.html
+++ b/kulkrig.html
@@ -29,11 +29,26 @@
             background-color: aqua;
         }
 
+        p{
+            font-size: larger;
+            color: floralwhite;
+        }
+
+        #Zeb{
+            font-size: 100px;
+            color: darkgoldenrod;
+            border-width: 20px;
+            border-color: aqua;
+            border-radius: 10px;
+        }
+
 
     </style>
 </head>
 
 <body>
+
+    <h1 id="Zeb">Seeeeeeeebbbbb Serine ringer</h1>
     <div class="container">
         <h1>HER ER NETTSIDEN SJEKK A</h1>
         <p> Hei vi er kule,(minus Trym)</p>
