--- a/kulkrig.html
+++ b/kulkrig.html
@@ -37,9 +37,11 @@
         #Zeb{
             font-size: 100px;
             color: darkgoldenrod;
+            background-color: antiquewhite;
             border-width: 20px;
             border-color: aqua;
             border-radius: 10px;
+
         }
 
 
