--- a/kulkrig.html
+++ b/kulkrig.html
@@ -41,7 +41,7 @@
             border-width: 20px;
             border-color: aqua;
             border-radius: 10px;
-
+            text-align: center;
         }
 
 
