--- a/kulkrig.html
+++ b/kulkrig.html
@@ -45,7 +45,7 @@
         }
 
 
-        .Ekstra boks{
+        .Ekstra_boks{
             display: flex;
             align-items: center;
         }
