--- a/kulkrig.html
+++ b/kulkrig.html
@@ -49,6 +49,12 @@
             display: flex;
             align-items: center;
         }
+
+        .johan {
+            width: 100%;
+            height: 50vh;
+            box-shadow: 2px 2px 2px 2px;
+        }
     </style>
 </head>
 
@@ -65,7 +71,7 @@
         <h1>kule gutter og trym</h1>
     </div>
 
-    <img src="Photos/johan.png" alt="Johan skal være her">
+    <img class="johan" src="Photos/johan.png" alt="Johan skal være her">
 
     <div class="Ekstra_boks">
         <h2>Olebassen06 er grov</h2>
