--- a/kulkrig.html
+++ b/kulkrig.html
@@ -48,7 +48,16 @@
         .Ekstra_boks{
             display: flex;
             align-items: center;
+            font-size: x-large;
+            color: blanchedalmond;
         }
+
+        #trym{
+            width: 100%;
+            margin-top: 30px;
+        }
+
+
     </style>
 </head>
 
@@ -65,7 +74,7 @@
         <h1>kule gutter og trym</h1>
     </div>
 
-    <img src="Photos/johan.png" alt="Johan skal være her">
+    <img id="trym" src="Photos/johan.png" alt="Johan skal være her">
 
     <div class="Ekstra_boks">
         <h2>Olebassen06 er grov</h2>
