--- a/kulkrig.html
+++ b/kulkrig.html
@@ -42,6 +42,7 @@
             border-color: aqua;
             border-radius: 30px;
             text-align: center;
+            margin: 20px;
         }
 
 
