--- a/kulkrig.html
+++ b/kulkrig.html
@@ -51,6 +51,8 @@
             align-items: center;
             font-size: x-large;
             color: blanchedalmond;
+            text-decoration: double;
+            text-align: center;
         }
 
         #trym{
