tester dette hardt som faen

--- a/kulkrig.html
+++ b/kulkrig.html
@@ -75,7 +75,7 @@
         <h1>kule gutter og trym</h1>
     </div>
 
-    <img id="trym" src="Photos/johan.png" alt="Johan skal være her">
+    <img id="trym" src="bilder/johan.png" alt="Johan skal være her">
 
     <div class="Ekstra_boks">
         <h2>Olebassen06 er grov</h2>
