--- a/kulkrig.html
+++ b/kulkrig.html
@@ -82,6 +82,12 @@
     <div class="Ekstra_boks">
         <h2>Olebassen06 er grov</h2>
     </div>
+
+    <script>
+    function johan(){
+        let johan = ginger
+    }
+    </script>
 </body>
 
 </html>
