--- a/kulkrig.html
+++ b/kulkrig.html
@@ -52,7 +52,8 @@
             font-size: x-large;
             color: blanchedalmond;
             text-decoration: double;
-            text-align: center;
+            justify-content: center;
+            margin: 30px;
         }
 
         #trym{
