--- a/Index.html
+++ b/Index.html
@@ -4,65 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Index.css">
     <title>Kulkrig</title>
 
-    <style>
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            gap: 40px;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            background-color: brown;
-
-        }
-
-        h1 {
-            color: blue;
-            border: 2px solid black;
-            border-radius: 2px;
-            background-color: aqua;
-        }
-
-        p{
-            font-size: larger;
-            color: floralwhite;
-        }
-
-        #Zeb{
-            font-size: 100px;
-            color: darkgoldenrod;
-            background-color: antiquewhite;
-            border-width: 20px;
-            border-color: aqua;
-            border-radius: 30px;
-            text-align: center;
-            margin: 20px;
-        }
-
-
-        .Ekstra_boks{
-            display: flex;
-            align-items: center;
-            font-size: x-large;
-            color: blanchedalmond;
-            text-decoration: double;
-            justify-content: center;
-            margin: 30px;
-        }
-
-        #trym{
-            width: 100%;
-            margin-top: 30px;
-        }
-
-
-    </style>
 </head>
 
 <body>
