--- a/Index.html
+++ b/Index.html
@@ -10,23 +10,13 @@
 </head>
 
 <body>
+    <header>
 
-    <h1 id="Zeb">Seeeeeeeebbbbb Serine ringer</h1>
-    <div class="container">
-        <h1>HER ER NETTSIDEN SJEKK A</h1>
-        <p> Hei vi er kule,(minus Trym)</p>
-        <p> hei ser dere dette alex skriver</p>
-        <p> Trym vil ligge med mødre (og Johan sin lillesøster)</p>
-        <p> Prøver noe nytt, ser dere den</p>
-        <p>butta Gois</p>
-        <h1>kule gutter og trym</h1>
-    </div>
-
-    <img id="trym" src="bilder/johan.png" alt="Johan skal være her">
-
-    <div class="Ekstra_boks">
-        <h2>Olebassen06 er grov</h2>
-    </div>
+    </header>
+    <main>
+        
+    </main>
+    
 </body>
 
 </html>
