--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,13 @@
 
 <body>
     <header>
-
+        <div class="soldat_knapp_container">
+        </div>
+        <div id="gap_container">
+        <p>heihei</p>
+        </div>
+        <div class="soldat_knapp_container">
+        </div>
     </header>
     <main>
         
