--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         <div class="soldat_knapp_container">
         </div>
         <div id="gap_container">
-        <p>heihei</p>
+        <p>Snojje´s kule videospill!</p>
         </div>
         <div class="soldat_knapp_container">
         </div>
