--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
         <div id="gap_container">
             <p>Snojje´s kule videospill!</p>
+            <div id="timer"></div>
         </div>
         <div class="soldat_knapp_container">
         </div>
