--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="soldat_knapp_container">
         </div>
         <div id="gap_container">
-            <p>Snojje´s kule videospill!</p>
+            <p>The fight of the lost sigmas</p>
             <div id="timer"></div>
         </div>
         <div class="soldat_knapp_container">
