--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
-            <div id="timer"></div>
+            <div id="timer">(Timer)</div>
         </div>
         <div class="soldat_knapp_container">
         </div>
