bilder lagt til

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         </div>
     </header>
     <main>
+        <img src="bilder/totem.png">
+        <img src="bilder/saloon.jpg">
 
     </main>
 
