--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <img src="bilder/totem.png">
-        <img src="bilder/saloon.jpg">
+        <img src="bilder/saloon.png">
 
     </main>
 
