--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="soldat_knapp_container">
+            <div id="soldat_1_knapp"></div>
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
