--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <header>
         <div class="soldat_knapp_container">
-            <div id="soldat_1_knapp"></div>
+            <button id="soldat_1_knapp"></button>
+            <button id="soldat_2_knapp"></button>
+            <button id="soldat_3_knapp"></button>
+            <button id="soldat_4_knapp"></button>
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
