--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="soldat_knapp_container">
             <button id="soldat_1_knapp"></button>
-            <button id="soldat_2_knapp"></button>
+            <button id="soldat_2_knapp"><img src="johan.png" alt="johan"></button>
             <button id="soldat_3_knapp"></button>
             <button id="soldat_4_knapp"></button>
         </div>
