--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
+            <div id="timer"></div>
+            <button onclick="startTimer()">Start</button>
         </div>
         <div class="soldat_knapp_container">
         </div>
