endra alt på bilder

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
     </header>
     <main>
-        <img src="bilder/totem.png">
-        <img src="bilder/saloon.png">
+        <img src="bilder/totem.png" alt="totem">
+        <img src="bilder/saloon.png" alt="saloon">
 
     </main>
 
