--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <div class="soldat_knapp_container">
-            <button id="soldat_1_knapp"></button>
+            <button id="soldat_1_knapp"><img src="bilder/Trym.PNG" alt="Trym"></button>
             <button id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
-            <button id="soldat_3_knapp"></button>
+            <button id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
             <button id="soldat_4_knapp"></button>
         </div>
         <div id="gap_container">
