--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="soldat_knapp_container">
             <button id="soldat_1_knapp"></button>
-            <button id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
+            <button onclick="summonJohan()" id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
             <button id="soldat_3_knapp"></button>
             <button id="soldat_4_knapp"></button>
         </div>
@@ -24,9 +24,8 @@
         </div>
     </header>
     <main>
-        <img src="bilder/totem.png" alt="totem">
         <img src="bilder/saloon.png" alt="saloon">
-
+        <img src="bilder/totem.png" alt="totem">
     </main>
     <script src="index.js"></script>
 </body>
