--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="soldat_knapp_container">
         </div>
     </header>
-    <main>
+    <main id="main">
         <img src="bilder/saloon.png" alt="saloon">
         <img src="bilder/totem.png" alt="totem">
     </main>
