--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button id="soldat_1_knapp"><img src="bilder/Trym.PNG" alt="Trym"></button>
             <button onclick="summonJohan()" id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
             <button id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
-            <button id="soldat_4_knapp"></button>
+            <button id="soldat_4_knapp"><img src="bilder/Jokkis.jpg" alt="Jokkis"></button>
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
