lager func for alle

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <div class="soldat_knapp_container">
-            <button id="soldat_1_knapp"><img src="bilder/Trym.PNG" alt="Trym"></button>
+            <button onclick="summonTrym()"id="soldat_1_knapp"><img src="bilder/Trym.PNG" alt="Trym"></button>
             <button onclick="summonJohan()" id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
-            <button id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
-            <button id="soldat_4_knapp"><img src="bilder/Jokkis.jpg" alt="Jokkis"></button>
+            <button onclick="summonPer()"id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
+            <button onclick="summonJokkis()"id="soldat_4_knapp"><img src="bilder/Jokkis.jpg" alt="Jokkis"></button>
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
