--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
             <div id="timer">00:00</div>
-            <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp">Start</button>
+            <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start</button>
         </div>
         <div class="soldat_knapp_container">
         </div>
