--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp">Start</button>
         </div>
         <div class="soldat_knapp_container">
+            <div class="penger">
+            </div>
         </div>
     </header>
     <main id="main">
