--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
         <div class="soldat_knapp_container">
             <div class="penger">
+                <p>Ant penger</p>
             </div>
         </div>
     </header>
