--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main id="main">
         <img src="bilder/saloon.png" alt="saloon">
-        <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start</button>
+        <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start <p id="litentekst">Halla på deg, dette er et spill der du skal plassere ut råkule soldater for å drepe tårnet til motstanderen(eller noe sånt). Jo dyrere soldatene er, jo bedre og sterkere er de. Lykke til!</p></button>
         <img src="bilder/totem.png" alt="totem">
     </main>
     <script src="index.js"></script>
