--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 <body>
     <header>
         <div class="soldat_knapp_container">
-            <button onclick="summonTrym()"id="soldat_1_knapp"><img src="bilder/Trym.PNG" alt="Trym"></button>
+            <div class="dropdown">
+                <button onclick="summonTrym()" id="soldat_1_knapp"><img src="bilder/Trym.PNG" alt="Trym"></button>
+                <div class="dropdown-content">
+                    <p> 100 Ataler
+                    </p>
+                </div>
+            </div>
             <button onclick="summonJohan()" id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
-            <button onclick="summonPer()"id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
-            <button onclick="summonJokkis()"id="soldat_4_knapp"><img src="bilder/Jokkis.jpg" alt="Jokkis"></button>
+            <button onclick="summonPer()" id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
+            <button onclick="summonJokkis()" id="soldat_4_knapp"><img src="bilder/Jokkis.jpg" alt="Jokkis"></button>
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
@@ -27,7 +33,10 @@
     </header>
     <main id="main">
         <img src="bilder/saloon.png" alt="saloon">
-        <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start <p id="litentekst">Halla på deg, dette er et spill der du skal plassere ut råkule soldater for å drepe tårnet til motstanderen(eller noe sånt). Jo dyrere soldatene er, jo bedre og sterkere er de. Lykke til!</p></button>
+        <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start <p
+                id="litentekst">Halla på deg, dette er et spill der du skal plassere ut råkule soldater for å drepe
+                tårnet til motstanderen(eller noe sånt). Jo dyrere soldatene er, jo bedre og sterkere er de. Lykke til!
+            </p></button>
         <img src="bilder/totem.png" alt="totem">
     </main>
     <script src="index.js"></script>
