--- a/index.html
+++ b/index.html
@@ -17,9 +17,27 @@
                     </p>
                 </div>
             </div>
-            <button onclick="summonJohan()" id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
-            <button onclick="summonPer()" id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
-            <button onclick="summonJokkis()" id="soldat_4_knapp"><img src="bilder/Jokkis.jpg" alt="Jokkis"></button>
+            <div class="dropdown">
+                <button onclick="summonJohan()" id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
+                <div class="dropdown-content">
+                    <p> 50 Ataler
+                    </p>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button onclick="summonPer()" id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
+                <div class="dropdown-content">
+                    <p> 20 Ataler
+                    </p>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button onclick="summonJokkis()" id="soldat_4_knapp"><img src="bilder/Jokkis.jpg" alt="Jokkis"></button>
+                <div class="dropdown-content">
+                    <p> 10 Ataler
+                    </p>
+                </div>
+            </div>
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
