--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </div>
     </header>
     <main id="main">
+        <canvas id="myCanvas" width="500" height="300"></canvas>
         <img src="bilder/saloon.png" alt="saloon">
         <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start <p
                 id="litentekst">Halla på deg, dette er et spill der du skal plassere ut råkule soldater for å drepe
