--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="soldat_knapp_container">
             <div class="penger">
-                <p>Ant penger</p>
+                <p>Antall Ataler</p>
             </div>
         </div>
     </header>
