--- a/index.html
+++ b/index.html
@@ -52,10 +52,14 @@
     <main id="main">
         <canvas id="myCanvas" width="1300" height="400"></canvas>
         <img id="saloon" src="bilder/saloon.png" alt="saloon">
-        <button onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start <p
+        <button onclick="startSound()" onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start <p
                 id="litentekst">Halla på deg, dette er et spill der du skal plassere ut råkule soldater for å drepe
                 tårnet til motstanderen(eller noe sånt). Jo dyrere soldatene er, jo bedre og sterkere er de. Lykke til!
             </p></button>
+        <audio id="themesong">
+            <source src="Themesong.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
         <img id="totem" src="bilder/totem.png" alt="totem">
     </main>
     <script src="index.js"></script>
