--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 tårnet til motstanderen(eller noe sånt). Jo dyrere soldatene er, jo bedre og sterkere er de. Lykke til!
             </p></button>
         <audio id="themesong">
-            <source src="Themesong.mp3" type="audio/mpeg">
+            <source src="lyder/Themesong.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <img id="totem" src="bilder/totem.png" alt="totem">
