--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main id="main">
         <canvas id="myCanvas" width="1300" height="400"></canvas>
         <img id="saloon" src="bilder/saloon.png" alt="saloon">
-        <button onclick="startSound()" onclick="startTimer()" onclick="moveJohan()" class="litenknapp" id="startknapp">Start <p
+        <button onclick="startSpill()" class="litenknapp" id="startknapp">Start <p
                 id="litentekst">Halla på deg, dette er et spill der du skal plassere ut råkule soldater for å drepe
                 tårnet til motstanderen(eller noe sånt). Jo dyrere soldatene er, jo bedre og sterkere er de. Lykke til!
             </p></button>
