--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 er et spill der du skal plassere ut råkule soldater for å drepe
                 tårnet til motstanderen(eller noe sånt). Jo dyrere soldatene er, jo bedre og sterkere er de. Lykke til!
             </p></button>
+        <audio id="introimpact">
+            <source src="lyder/introimpact.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
         <audio id="themesong">
             <source src="lyder/Themesong.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
