--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <div class="soldat_knapp_container">
+        <div id="soldat_knapp_container">
             <div class="dropdown">
                 <button onclick="summonTrym()" id="soldat_1_knapp"><img src="bilder/Trym.PNG" alt="Trym"></button>
                 <div class="dropdown-content">
