La på totem health div

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <canvas id="myCanvas" width="1400" height="400"></canvas>
         <img id="saloon" src="bilder/saloon.png" alt="saloon">
         <img id="totem" src="bilder/totem.png" alt="totem">
+        <div id="totemHealth"></div>
         <button onclick="startSpill()" class="litenknapp" id="startknapp">Start <p id="litentekst">Halla på deg, dette
                 er et spill der du skal plassere ut råkule soldater for å drepe
                 tårnet til motstanderen(eller noe sånt). Jo dyrere soldatene er, jo bedre og sterkere er de. Lykke til!
