--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <div class="dropdown-content">
                     <p> 10 Ataler
                     </p>
+                    <p>Damage: 750</p>
+                    <p>Health: 2500</p>
                 </div>
             </div>
         </div>
