--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
             <div class="dropdown">
                 <button onclick="summonTrym()" id="soldat_1_knapp"><img src="bilder/Trym.PNG" alt="Trym"></button>
                 <div class="dropdown-content">
-                    <p> 100 Ataler
-                    </p>
+                    <p>Ataler: 100α</p>
+                    <p>Damage: 12000</p>
+                    <p>Health: 7500 hp</p>
                 </div>
             </div>
             <div class="dropdown">
                 <button onclick="summonJohan()" id="soldat_2_knapp"><img src="bilder/johan.png" alt="johan"></button>
                 <div class="dropdown-content">
-                    <p> 50 Ataler
-                    </p>
+                    <p>Ataler: 50α</p>
+                    <p>Damage: 3000</p>
+                    <p>Health: 20000 hp</p>
                 </div>
             </div>
             <div class="dropdown">
                 <button onclick="summonPer()" id="soldat_3_knapp"><img src="bilder/PER.JPG" alt="Per"></button>
                 <div class="dropdown-content">
-                    <p> 20 Ataler
-                    </p>
+                    <p>Ataler: 20α</p>
+                    <p>Damage: 2000</p>
+                    <p>Health: 5000 hp</p>
                 </div>
             </div>
             <div class="dropdown">
                 <button onclick="summonJokkis()" id="soldat_4_knapp"><img src="bilder/Jokkis.jpg" alt="Jokkis"></button>
                 <div class="dropdown-content">
-                    <p> 10 Ataler
-                    </p>
+                    <p>Ataler: 10α</p>
                     <p>Damage: 750</p>
-                    <p>Health: 2500</p>
+                    <p>Health: 2500 hp</p>
                 </div>
             </div>
         </div>
