masse rart av endringer, fiender og lagt til seierslyd som ikke funker

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     <p>Health: 2500 hp</p>
                 </div>
             </div>
+            <div>
+                <button onclick="summonEnemy()">Midlertidig summon enemy knapp</button>
+            </div>
         </div>
         <div id="gap_container">
             <p>The fight of the lost sigmas</p>
