--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div>
-                <button onclick="summonEnemy()">Midlertidig summon enemy knapp</button>
+                <button id="enemyButton" onclick="summonEnemy()">Midlertidig summon enemy knapp</button>
             </div>
         </div>
         <div id="gap_container">
